--- a/Project8/Project8/FPTBookstore.csproj
+++ b/Project8/Project8/FPTBookstore.csproj
@@ -1143,6 +1143,7 @@
     <Content Include="Views\User\CheckActivationNotification.cshtml" />
     <Content Include="Views\Cart\TrackingOder.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Shared\_LayoutUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
