--- a/Project8/Project8/FPTBookstore.csproj
+++ b/Project8/Project8/FPTBookstore.csproj
@@ -674,6 +674,7 @@
     <Content Include="images\background2.jpg" />
     <Content Include="images\background3.jpg" />
     <Content Include="images\Becoming.jpg" />
+    <Content Include="images\Beloved.jpg" />
     <Content Include="images\Brown Bear, Brown Bear, What Do You See.jpg" />
     <Content Include="images\Charlie and the Chocolate Factory.jpg" />
     <Content Include="images\combo1.jpg" />
